--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
@@ -8,11 +8,15 @@ image: /img/TWIR_POST.png
 
 Salut à tous !
 
-<!-- intro TODO -->
+Content de vous informer que mon premier email envoyé depuis [ConvertKit](https://thisweekinreact.com/convertkit) a bien été reçu par la grande majorité d'entre vous: ma migration de provider email est donc réussie !
 
-https://thisweekinreact.com/articles/useSyncExternalStore-the-underrated-react-api
+Et je suis également très content de la réception de mon [article sur `useSyncExternalStore`](https://thisweekinreact.com/fr/articles/useSyncExternalStore-the-underrated-react-api)! Merci pour vos nombreux retours, je vais essayer d'en écrire d'autres prochainement. L'idée est d'avoir un email dédié a 100% sur un sujet précis, pour apprendre quelque chose de nouveau en peu de temps.
 
 <!-- truncate -->
+
+Sinon, c'est la reprise de la newsletter hebdomadaire de curation. C'est une édition un peu spéciale : j'ai mis tous les liens intéressants des dernières semaines. Il y en a beaucoup trop et je ne peux pas vous les commenter cette fois 😅 Ne vous inquietez pas, on reprend le format habituel fin Septembre à mon retour de vacances !
+
+---
 
 Pour me soutenir:
 
@@ -20,7 +24,7 @@ Pour me soutenir:
 - 💸 [**Sponsorise la newsletter**](https://thisweekinreact.com/fr/sponsor) ou [**sponsorise-moi**](https://github.com/sponsors/slorber)
 - 🧵 [**Retweet le dernier thread Twitter**](https://slo.im/thread)
 - 📨 Réponds à cet [**email**](mailto:sebastien@thisweekinreact.com): merci pour vos nombreux retours
-- 💬 Rejoins le [**chat Discord**](https://thisweekinreact/discord)
+- 💬 Rejoins le [**chat Discord**](https://thisweekinreact.com/discord)
 
 <SubscribeFormEmbed />
 
@@ -38,58 +42,50 @@ Consultez le [Hub Technologique](https://www.storyblok.com/technologies?utm_sour
 
 ## ⚛️ React
 
-[**Next.js 12.3**](https://nextjs.org/blog/next-12-3)
+- 📜 [Improving INP with React 18 and Suspense](https://vercel.com/blog/improving-interaction-to-next-paint-with-react-18-and-suspense)
+- 📜 [PureComponents vs Functional Components with hooks](https://www.developerway.com/posts/pure-components-vs-functional-and-hooks)
+- 📜 [Why React Re-Renders](https://www.joshwcomeau.com/react/why-react-re-renders/)
+- 📜 [Understanding useMemo and useCallback](https://www.joshwcomeau.com/react/usememo-and-usecallback/)
+- 📜 [Avoiding useEffect with callback refs](https://tkdodo.eu/blog/avoiding-use-effect-with-callback-refs)
+- 📜 [React Query meets React Router](https://tkdodo.eu/blog/react-query-meets-react-router)
+- 📜 [(Re-) Introducing Gatsby, A Reactive Site Generator](https://www.gatsbyjs.com/blog/re-introducing-gatsby-a-reactive-site-generator/)
+- 📜 [Advanced React component composition](https://frontendmastery.com/posts/advanced-react-component-composition-guide/)
+- 📜 [Can We All Just Admit React Hooks Were a Bad Idea? Part 2](https://medium.com/codex/can-we-all-just-admit-react-hooks-were-a-bad-idea-795505b0485d)
+- 📜 [Why Storybook in 2022?](https://storybook.js.org/blog/why-storybook-in-2022/) + [7.0 design alpha](https://storybook.js.org/blog/7-0-design-alpha/) + [Writing stories in TypeScript](https://storybook.js.org/blog/writing-stories-in-typescript/)
+- 📜 [A Complete Guide to React Router: Everything You Need to Know](https://ui.dev/react-router-tutorial)
+- 📜 [9 Bad React Habits to Kick From Your Life](https://cult.honeypot.io/reads/bad-react-habits-to-kick/)
+- 📜 [Validating Remix Form Data Using Zod and TypeScript in Action Functions](https://egghead.io/blog/validating-remix-form-data-using-zod-and-typescript-in-action-functions)
+- 📜 [The minimum TypeScript you need for React](https://ente.io/blog/tech/typescript-for-react/)
+- 📜 [Patterns.dev - Rendering Patterns](https://www.patterns.dev/posts/rendering-introduction/)
+- 📜 [We measured the SSR performance of 6 JS frameworks](https://dev.to/kaspera/we-measured-the-ssr-performance-of-6-js-frameworks-heres-what-we-found-1ck0)
+- 📜 [Should You Use A ClassName Prop?](https://www.chakshunyu.com/blog/should-you-use-a-classname-prop/)
+- 📜 [Avoiding dynamic CSS-in-JS styles in React](https://nickb.dev/blog/avoid-dynamic-css-in-js-styles-in-react/)
+- 📜 [Frontend security primer](https://frontendmastery.com/posts/frontend-security-primer/)
+- 📜 [React Error Boundaries: A Complete Guide](https://meticulous.ai/blog/react-error-boundaries-complete-guide/)
+- 📜 [The GPU Banana Stand](https://acko.net/blog/the-gpu-banana-stand/)
+- 📜 [A first look at create-t3-app](https://dev.to/ajcwebdev/a-first-look-at-create-t3-app-1i8f)
+- 📜 [Moving House to Next.js](https://blog.benchsci.com/moving-house-to-next.js)
+- 📜 [Bringing Together Keyboard-only and Click-based UI Tests with keyboard-testing-library](https://testingaccessibility.com/introducing-keyboard-testing-library-by-grunet)
+- 📜 [5 Most Common useState Mistakes React Developers Often Make](https://refine.dev/blog/common-usestate-mistakes-and-how-to-avoid/)
+- 📜 [Transform content at the edge with Netlify’s Next.js Runtime](https://www.netlify.com/blog/nextjs-advanced-middleware-better-runtime-that-extends-nextjs/)
+- 📜 [Scaling RSG Builds With Gatsby’s Data Layer](https://www.gatsbyjs.com/blog/scaling-rsg-builds-with-gatsbys-data-layer/)
+- 📜 [Is Gatsby In Decline?](https://deliciousreverie.co.uk/posts/is-gatsby-decline/)
+- 📖 [Separating Events from Effects](https://beta.reactjs.org/learn/separating-events-from-effects)
+- 📖 [Removing Effect Dependencies](https://beta.reactjs.org/learn/removing-effect-dependencies)
+- 👥 [Next.js Conf 2022](https://vercel.com/blog/nextjs-conf-2022)
+- 🎥 [Creating F1 graphics in JavaScript](https://www.youtube.com/watch?v=sA-X0Bw_7Gg)
+- ⏱ [Comparing website performance: Gatsby vs Next vs Nuxt](https://www.gatsbyjs.com/blog/comparing-website-performance-gatsby-vs-next-vs-nuxt/)
+- 📦 [Redwood v3.0.0 RC](https://community.redwoodjs.com/t/redwood-v3-0-0-rc-is-now-available/3836)
+- 📦 [Next.js 12.3](https://nextjs.org/blog/next-12-3)
+- 📦 [Preact Signals](https://preactjs.com/blog/introducing-signals/)
+- 📦 [Blitz 2.0 beta](https://github.com/blitz-js/blitz/releases/tag/v2.0.0-beta.1)
+- 📦 [Astro 1.0](https://astro.build/blog/astro-1/)
+- 📦 [Fresh 1.1](https://deno.com/blog/fresh-1.1)
+- 📦 [Mailing](https://www.mailing.run/)
+- 📦 [Remotion 3.2](https://www.remotion.dev/blog/3-2)
+- 📦 Gatsby [v4.20](https://www.gatsbyjs.com/docs/reference/release-notes/v4.20/) + [v4.21](https://www.gatsbyjs.com/docs/reference/release-notes/v4.21/) + [v4.22](https://www.gatsbyjs.com/docs/reference/release-notes/v4.22/)
 
-[**Astro 1.0**](https://astro.build/blog/astro-1/)
-
-[**PureComponents vs Functional Components with hooks**](https://www.developerway.com/posts/pure-components-vs-functional-and-hooks)
-
-[**Preact Signals**](https://preactjs.com/blog/introducing-signals/)
-
-[**Why React Re-Renders**](https://www.joshwcomeau.com/react/why-react-re-renders/)
-
-[**Understanding useMemo and useCallback**](https://www.joshwcomeau.com/react/usememo-and-usecallback/)
-
-[**Avoiding useEffect with callback refs**](https://tkdodo.eu/blog/avoiding-use-effect-with-callback-refs)
-
-[**React Query meets React Router**](https://tkdodo.eu/blog/react-query-meets-react-router)
-
-[**(Re-) Introducing Gatsby, A Reactive Site Generator**](https://www.gatsbyjs.com/blog/re-introducing-gatsby-a-reactive-site-generator/)
-
-[**Advanced React component composition**](https://frontendmastery.com/posts/advanced-react-component-composition-guide/)
-
-[**Can We All Just Admit React Hooks Were a Bad Idea?**](https://medium.com/codex/can-we-all-just-admit-react-hooks-were-a-bad-idea-795505b0485d)
-
-[**Why Storybook in 2022?**](https://storybook.js.org/blog/why-storybook-in-2022/)
-
-- [7.0 design alpha](https://storybook.js.org/blog/7-0-design-alpha/)
-- [Writing stories in TypeScript](https://storybook.js.org/blog/writing-stories-in-typescript/)
-
-**Extras:**
-
-- [Fresh 1.1](https://deno.com/blog/fresh-1.1)
-- [Patterns.dev - Rendering Patterns](https://www.patterns.dev/posts/rendering-introduction/)
-- [We measured the SSR performance of 6 JS frameworks](https://dev.to/kaspera/we-measured-the-ssr-performance-of-6-js-frameworks-heres-what-we-found-1ck0)
-- [Should You Use A ClassName Prop?](https://www.chakshunyu.com/blog/should-you-use-a-classname-prop/)
-- [Avoiding dynamic CSS-in-JS styles in React](https://nickb.dev/blog/avoid-dynamic-css-in-js-styles-in-react/)
-- [Separating Events from Effects](https://beta.reactjs.org/learn/separating-events-from-effects)
-- [Removing Effect Dependencies](https://beta.reactjs.org/learn/removing-effect-dependencies)
-- [Frontend security primer](https://frontendmastery.com/posts/frontend-security-primer/)
-- [React Error Boundaries: A Complete Guide](https://meticulous.ai/blog/react-error-boundaries-complete-guide/)
-- [The GPU Banana Stand](https://acko.net/blog/the-gpu-banana-stand/)
-- [A first look at create-t3-app](https://dev.to/ajcwebdev/a-first-look-at-create-t3-app-1i8f)
-- [Moving House to Next.js](https://blog.benchsci.com/moving-house-to-next.js)
-- [Bringing Together Keyboard-only and Click-based UI Tests with keyboard-testing-library](https://testingaccessibility.com/introducing-keyboard-testing-library-by-grunet)
-- [Next.js Conf 2022](https://vercel.com/blog/nextjs-conf-2022)
-- [Redwood v3.0.0 RC](https://community.redwoodjs.com/t/redwood-v3-0-0-rc-is-now-available/3836)
-- [Mailing](https://www.mailing.run/)
-- [Remotion 3.2](https://www.remotion.dev/blog/3-2) + [Creating F1 graphics in JavaScript](https://www.youtube.com/watch?v=sA-X0Bw_7Gg)
-- [5 Most Common useState Mistakes React Developers Often Make](https://refine.dev/blog/common-usestate-mistakes-and-how-to-avoid/)
-- [Transform content at the edge with Netlify’s Next.js Runtime](https://www.netlify.com/blog/nextjs-advanced-middleware-better-runtime-that-extends-nextjs/)
-- [Comparing website performance: Gatsby vs Next vs Nuxt](https://www.gatsbyjs.com/blog/comparing-website-performance-gatsby-vs-next-vs-nuxt/)
-- [Scaling RSG Builds With Gatsby’s Data Layer](https://www.gatsbyjs.com/blog/scaling-rsg-builds-with-gatsbys-data-layer/)
-- [Is Gatsby In Decline?](https://deliciousreverie.co.uk/posts/is-gatsby-decline/)
-- Gatsby [v4.20](https://www.gatsbyjs.com/docs/reference/release-notes/v4.20/) + [v4.21](https://www.gatsbyjs.com/docs/reference/release-notes/v4.21/) + [v4.22](https://www.gatsbyjs.com/docs/reference/release-notes/v4.22/)
+---
 
 ## 💸 Sponsor
 
@@ -103,26 +99,23 @@ Cambly, c'est la plateforme pour progresser à l'oral en anglais avec des tuteur
 
 ## 📱 React-Native
 
-[**Announcing React Native 0.70**](https://reactnative.dev/blog/2022/09/05/version-070)
-
-[**The New Expo CLI**](https://blog.expo.dev/the-new-expo-cli-f4250d8e3421)
-
-[**EAS Build Changelog**](https://blog.expo.dev/eas-build-changelog-43b886b2fa24)
-
-**Extras:**
-
-- [Ditch the Simulator — Running Expo Dev Client natively on an M1 Mac](https://medium.com/@derekstavis/ditch-the-simulator-running-expo-dev-client-natively-on-an-m1-mac-28d269e9af17)
-- [Metro `require.context`](https://github.com/facebook/metro/pull/822): nouvelle feature du bundler qui va permettre d'ajouter le support du routing en fonction des conventions file-system dans React-Navigation ([demo](https://twitter.com/Baconbrix/status/1560353229241831425))
-- [React-Native EU 2022](https://www.youtube.com/playlist?list=PLZ3MwD-soTTE-qcA0MrcvZBdmkHJSIjJX)
-- [Setting Max Width When Supporting Web and Mobile in React Native](https://www.reactnativeschool.com/setting-max-width-when-supporting-web-and-mobile-in-react-native)
-- [Add support for Web styles](https://github.com/facebook/react-native/issues/34425)
-- [RFC: Reduce API fragmentation across platforms](https://github.com/react-native-community/discussions-and-proposals/pull/496)
-- [Meta working on Yoga successor?](https://github.com/facebook/yoga/pull/1116#issuecomment-1201813564)
-- [Major Pain Points to Migrate to the New Architecture](https://github.com/reactwg/react-native-new-architecture/discussions/68)
-- [Expo + white-label apps demo](https://twitter.com/Baconbrix/status/1557773847717416964)
-- [Baran animation demos](https://twitter.com/barany6m)
-- [React-Native-Radio #243-246](https://reactnativeradio.com/episodes): FlashList, feedback from GasBuddy, Mercari
-- [The React Native Show Ep.15 - Reassure](https://www.youtube.com/watch?v=8pTQKBHFs-8)
+- 📦 [Announcing React Native 0.70](https://reactnative.dev/blog/2022/09/05/version-070)
+- 📜 [The New Expo CLI](https://blog.expo.dev/the-new-expo-cli-f4250d8e3421)
+- 📜 [EAS Build Changelog](https://blog.expo.dev/eas-build-changelog-43b886b2fa24)
+- 📜 [Instant Performance Upgrade: From FlatList to FlashList](https://shopify.engineering/instant-performance-upgrade-flatlist-flashlist)
+- 📜 [Ditch the Simulator — Running Expo Dev Client natively on an M1 Mac](https://medium.com/@derekstavis/ditch-the-simulator-running-expo-dev-client-natively-on-an-m1-mac-28d269e9af17)
+- 📜 [Setting Max Width When Supporting Web and Mobile in React Native](https://www.reactnativeschool.com/setting-max-width-when-supporting-web-and-mobile-in-react-native)
+- 🚧 [Metro `require.context`](https://github.com/facebook/metro/pull/822) + [Expo file-system routing demo](https://twitter.com/Baconbrix/status/1560353229241831425)
+- 🎥 [React-Native EU 2022](https://www.youtube.com/playlist?list=PLZ3MwD-soTTE-qcA0MrcvZBdmkHJSIjJX)
+- 💬 [Umbrella issue - Add support for Web styles](https://github.com/facebook/react-native/issues/34425)
+- 💬 [RFC: Reduce API fragmentation across platforms](https://github.com/react-native-community/discussions-and-proposals/pull/496)
+- 💬 [Major Pain Points to Migrate to the New Architecture](https://github.com/reactwg/react-native-new-architecture/discussions/68)
+- 🎨 [Expo + white-label apps demo](https://twitter.com/Baconbrix/status/1557773847717416964)
+- 🎨 [Baran animations demos](https://twitter.com/barany6m)
+- 🎨 [Flight animation demo](https://twitter.com/lima_lucas3)
+- 📡 [Meta working on Yoga successor?](https://github.com/facebook/yoga/pull/1116#issuecomment-1201813564)
+- 🎙️ [React-Native-Radio #243-246](https://reactnativeradio.com/episodes)
+- 🎙️ [React Native Show #15 - Reassure](https://www.youtube.com/watch?v=8pTQKBHFs-8)
 
 <SubscribeFormEmbed />
 
@@ -160,13 +153,12 @@ The only hiring platform that puts developer health first. We connect React and 
 
 ## 🔀 Autre
 
-**Extras:**
-
-- [Lightning CSS](https://lightningcss.dev/): nouveau nom de Parcel CSS
+- [Lightning CSS](https://lightningcss.dev/)
 - [Announcing TypeScript 4.8](https://devblogs.microsoft.com/typescript/announcing-typescript-4-8/)
 - [TypeScript 4.9 Iteration Plan](https://github.com/microsoft/TypeScript/issues/50457)
 - [Oven.sh](https://oven.sh/)
 - [New to the web platform in August](https://web.dev/web-platform-08-2022/)
+- [New in Chrome 105](https://developer.chrome.com/blog/new-in-chrome-105/)
 - [Why is CrUX data different from my RUM data?](https://web.dev/crux-and-rum-differences/)
 - [Rewriting tests from Cypress to Playwright using GPT3](https://contra.com/p/PWBcPYZc-rewriting-tests-from-cypress-to-playwright-using-gpt-3)
 - [Critical CSS? Not So Fast!](https://csswizardry.com/2022/09/critical-css-not-so-fast/)
@@ -174,6 +166,13 @@ The only hiring platform that puts developer health first. We connect React and 
 - [Bunchee - zero config bundler for ECMAScript libraries](https://github.com/huozhi/bunchee)
 - [Resumability, WTF?](https://dev.to/this-is-learning/resumability-wtf-2gcm)
 - [The JavaScript Paradox](https://dev.to/this-is-learning/the-javascript-paradox-2njj)
+- [CSS container queries are finally here](https://ishadeed.com/article/container-queries-are-finally-here/)
+- [Using :has() as a CSS Parent Selector and much more](https://webkit.org/blog/13096/css-has-pseudo-class/)
+- [Use the Right Container Query Syntax](https://www.oddbird.net/2022/08/18/cq-syntax/)
+- [Big Changes Ahead for Deno](https://deno.com/blog/changes) + [Deno 1.25](https://deno.com/blog/v1.25)
+- [PlanetScale serverless driver for JavaScript](https://planetscale.com/blog/introducing-the-planetscale-serverless-driver-for-javascript)
+- [A first look at Bun: is it really 3x faster than Node.js and Deno?](https://dev.to/builderio/a-first-look-at-bun-is-it-really-3x-faster-than-nodejs-and-deno-45od)
+- [Can browsers optimize the loading of third-party resources?](https://developer.chrome.com/blog/third-party-scripts/)
 
 ---
 
