--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template.mdx
@@ -18,7 +18,7 @@ Pour me soutenir:
 - 💸 [**Sponsorise la newsletter**](https://thisweekinreact.com/fr/sponsor) ou [**sponsorise-moi**](https://github.com/sponsors/slorber)
 - 🧵 [**Retweet le dernier thread Twitter**](https://slo.im/thread)
 - 📨 Réponds à cet [**email**](mailto:sebastien@thisweekinreact.com): merci pour vos nombreux retours
-- 💬 Rejoins le [**chat Discord**](https://thisweekinreact/discord)
+- 💬 Rejoins le [**chat Discord**](https://thisweekinreact.com/discord)
 
 <SubscribeFormEmbed />
 
