--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 116
-title: "📨 #116: TODO"
+title: "📨 #116: Next.js, Gatsby, Blitz, Fresh, Astro, Preact, Redwood, Deno, Remotion, React-Native, Expo, TypeScript, Lightning CSS..."
 authors: [slorber]
 date: 09-09-2022
 image: /img/TWIR_POST.png
