--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template.mdx
@@ -14,10 +14,10 @@ Salut à tous !
 
 Pour me soutenir:
 
-- 😘 **Recommande la newsletter** ! Ça m'aide vraiment beaucoup !
+- 😘 **Recommande la newsletter**! Ça m'aide vraiment beaucoup!
 - 💸 [**Sponsorise la newsletter**](https://thisweekinreact.com/fr/sponsor) ou [**sponsorise-moi**](https://github.com/sponsors/slorber)
 - 🧵 [**Retweet le dernier thread Twitter**](https://slo.im/thread)
-- 📨 Réponds à cet [**email**](mailto:sebastien@thisweekinreact.com): merci pour vos nombreux retours
+- 📨 Réponds à cet [**email**](mailto:sebastien@thisweekinreact.com)
 - 💬 Rejoins le [**chat Discord**](https://thisweekinreact.com/discord)
 
 <SubscribeFormEmbed />
