--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
@@ -20,10 +20,10 @@ Sinon, c'est la reprise de la newsletter hebdomadaire de curation. C'est une éd
 
 Pour me soutenir:
 
-- 😘 **Recommande la newsletter** ! Ça m'aide vraiment beaucoup !
+- 😘 **Recommande la newsletter**! Ça m'aide vraiment!
 - 💸 [**Sponsorise la newsletter**](https://thisweekinreact.com/fr/sponsor) ou [**sponsorise-moi**](https://github.com/sponsors/slorber)
 - 🧵 [**Retweet le dernier thread Twitter**](https://slo.im/thread)
-- 📨 Réponds à cet [**email**](mailto:sebastien@thisweekinreact.com): merci pour vos nombreux retours
+- 📨 Réponds à cet [**email**](mailto:sebastien@thisweekinreact.com)
 - 💬 Rejoins le [**chat Discord**](https://thisweekinreact.com/discord)
 
 <SubscribeFormEmbed />
