--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
@@ -12,13 +12,13 @@ Content de vous informer que mon premier email envoyé depuis [ConvertKit](https
 
 Et je suis également très content de la réception de mon [article sur `useSyncExternalStore`](https://thisweekinreact.com/fr/articles/useSyncExternalStore-the-underrated-react-api)! Merci pour vos nombreux retours, je vais essayer d'en écrire d'autres prochainement. L'idée est d'avoir un email dédié a 100% sur un sujet précis, pour apprendre quelque chose de nouveau en peu de temps.
 
-<!-- truncate -->
-
 Sinon, c'est la reprise de la newsletter hebdomadaire de curation. C'est une édition un peu spéciale : j'ai mis tous les liens intéressants des dernières semaines. Il y en a beaucoup trop et je ne peux pas vous les commenter cette fois 😅 Ne vous inquietez pas, on reprend le format habituel fin Septembre à mon retour de vacances !
+
+<!-- truncate -->
 
 ---
 
-Pour me soutenir:
+**Pour me soutenir:**
 
 - 😘 **Recommande la newsletter**! Ça m'aide vraiment!
 - 💸 [**Sponsorise la newsletter**](https://thisweekinreact.com/fr/sponsor) ou [**sponsorise-moi**](https://github.com/sponsors/slorber)
