--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template.mdx
@@ -12,7 +12,9 @@ Salut à tous !
 
 <!-- truncate -->
 
-Pour me soutenir:
+---
+
+**Pour me soutenir:**
 
 - 😘 **Recommande la newsletter**! Ça m'aide vraiment beaucoup!
 - 💸 [**Sponsorise la newsletter**](https://thisweekinreact.com/fr/sponsor) ou [**sponsorise-moi**](https://github.com/sponsors/slorber)
