--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -3,7 +3,11 @@ import {
   sponsorshipCalendarLink,
   lastIssueLink,
 } from "@site/src/newsletter";
-import {PrimaryAdExample, SecondaryAdExample, JobAdExample} from "@site/src/components/AdExamples";
+import {
+  PrimaryAdExample,
+  SecondaryAdExample,
+  JobAdExample,
+} from "@site/src/components/AdExamples";
 
 # Sponsor the newsletter
 
@@ -80,28 +84,28 @@ Our editorial line assumes our readers are:
 <details>
   <summary>What makes this newsletter unique</summary>
 
-  It is a weekly curation of news **for** React developers, not just about React.
+It is a weekly curation of news **for** React developers, not just about React.
 
-  We focus on what's **really new** in an **exhaustive** way. There's usually **a lof of external links**, but readers aren't expected to click all of them: simply reading the headlines and comments usually provide enough value.
+We focus on what's **really new** in an **exhaustive** way. There's usually **a lof of external links**, but readers aren't expected to click all of them: simply reading the headlines and comments usually provide enough value.
 
-  We **filter content** heavily, and generally exclude:
+We **filter content** heavily, and generally exclude:
 
-  - content produced for SEO, based on keyword analysis
-  - listicles, 101's, verbose step-by-step tutorials
-  - most UI libraries and npm packages
+- content produced for SEO, based on keyword analysis
+- listicles, 101's, verbose step-by-step tutorials
+- most UI libraries and npm packages
 
 </details>
 
 <details>
   <summary>About the author - Sébastien Lorber</summary>
 
-  [**Sébastien Lorber**](https://www.linkedin.com/in/sebastienlorber) is a T-shaped software engineer, with a strong React and React-Native expertise.
+[**Sébastien Lorber**](https://www.linkedin.com/in/sebastienlorber) is a T-shaped software engineer, with a strong React and React-Native expertise.
 
-  He became a **React early-adopter in [**January 2014**](https://stackoverflow.com/questions/21352587/does-react-use-requestanimationframe-if-so-how-does-it-use-it).
+He became a \*\*React early-adopter in [January 2014](https://stackoverflow.com/questions/21352587/does-react-use-requestanimationframe-if-so-how-does-it-use-it).
 
-  With **nearly a decade of React experience**, he has the credibility and authority to know exactly what is interesting to a senior React developer, and is able to provide **unique insight**.
+With **nearly a decade of React experience**, he has the credibility and authority to know exactly what is interesting to a senior React developer, and is able to provide **unique insight**.
 
-  Since 2020, he has been **working for Meta** as a freelancer. He is the **lead maintainer of [Docusaurus](https://github.com/facebook/docusaurus)**, a React static site generator for creating beautiful documentation websites. It is one of Meta's most successful open source project. [Docusaurus 2.0 launched recently](https://docusaurus.io/blog/2022/08/01/announcing-docusaurus-2.0), and his managers and colleagues are satisfied of his work ([1](https://twitter.com/JoelMarcey/status/1554136849198637058), [2](https://twitter.com/zpao/status/1554147108961128451), [3](https://twitter.com/yangshunz/status/1554008007331041281)). This site itself is built with Docusaurus!
+Since 2020, he has been **working for Meta** as a freelancer. He is the **lead maintainer of [Docusaurus](https://github.com/facebook/docusaurus)**, a React static site generator for creating beautiful documentation websites. It is one of Meta's most successful open source project. [Docusaurus 2.0 launched recently](https://docusaurus.io/blog/2022/08/01/announcing-docusaurus-2.0), and his managers and colleagues are satisfied of his work ([1](https://twitter.com/JoelMarcey/status/1554136849198637058), [2](https://twitter.com/zpao/status/1554147108961128451), [3](https://twitter.com/yangshunz/status/1554008007331041281)). This site itself is built with Docusaurus!
 
 </details>
 
@@ -149,11 +153,12 @@ The newsletter structure stays the same every week, offering 3 sponsorship ad pl
   Check our{" "}
   <b>
     <a href={lastIssueLink}>last newsletter issue</a>
-  </b> to get a better idea!
+  </b>{" "}
+  to get a better idea!
 </span>
 
-<br/>
-<br/>
+<br />
+<br />
 
 :::tip
 
@@ -176,7 +181,7 @@ This sponsorship ad placement offers a generous ad copy length, near in the firs
 - **Body**: 900 characters max, max 2 links, max 3 line breaks, decent usage of bold/smileys/list
 - **Image**: small icon/logo allowed
 
-<PrimaryAdExample/>
+<PrimaryAdExample />
 
 </details>
 
@@ -195,7 +200,7 @@ This sponsorship ad placement appears in the middle of the newsletter, just unde
 - **Body**: 600 characters max, max 1 link, max 2 line breaks, decent usage of bold/smileys/list
 - **Image**: 🚫
 
-<SecondaryAdExample/>
+<SecondaryAdExample />
 
 </details>
 
@@ -214,7 +219,7 @@ A newsletter issue can contain **up to 4 job offers**.
 - **Body**: 230 characters max, 0 link, raw/unstyled text
 - **Image**: 🚫
 
-<JobAdExample/>
+<JobAdExample />
 
 </details>
 
@@ -271,7 +276,7 @@ Requested dates (dd/MM/yyyy):
 We are flexible for the dates: yes / no
 
 Company details for invoicing:
-- Name: ACME Corp
+- Company Name: ACME Corp
 - Street: 42 Software Street,
 - Postal code: 94102
 - City: San Francisco
@@ -313,7 +318,7 @@ You can book a sponsorship offer without providing the ad copy immediately. We k
 
 Send us your ad copy by email as rich text, including the links and formatting:
 
-<PrimaryAdExample/>
+<PrimaryAdExample />
 
 :::
 
