--- a/website/newsletter/116.mdx
+++ b/website/newsletter/116.mdx
@@ -20,7 +20,7 @@ Otherwise, the weekly curation newsletter is back. This is a bit of a special ed
 
 **To support me:**
 
-- 😘 **Recommend it to your friends**: it really helps!
+- 😘 **Recommend the newsletter to your friends**: it really helps!
 - 💸 [**Sponsor the newsletter**](https://thisweekinreact.com/sponsor) or [**sponsor me**](https://github.com/sponsors/slorber)
 - 🧵 [**Retweet the latest Twitter thread**](https://slo.im/thread)
 - 📨 Reply to this [**email**](mailto:sebastien@thisweekinreact.com): feedback is welcome
