--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
@@ -1,13 +1,13 @@
 ---
-slug: SLUG-TODO
-title: "📨 #TODO: ..."
+slug: template
+title: "📨 #TEMPLATE: ..."
 authors: [slorber]
-date: 09-27-2022
+date: 01-01-2030
 image: /img/TWIR_POST.png
 draft: true
 ---
 
-Hi everyone!
+Salut à tous !
 
 <Todo/>
 
@@ -61,11 +61,11 @@ import Jobs from "./_jobs.mdx"
 
 <Jobs/>
 
-💡 [How to publish an offer ?](https://thisweekinreact.com/sponsor)
+💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
 
 ---
 
-## 🔀 Other
+## 🔀 Autre
 
 import OtherContent from "./_other.mdx"
 
