--- a/website/newsletter/117/_jobs.mdx
+++ b/website/newsletter/117/_jobs.mdx
@@ -1,1 +1,7 @@
+🧑‍💼 [**G2i - 100% Remote JavaScript Jobs**](https://www.g2i.co/)
+
+The only hiring platform that puts developer health first. We connect React and React Native freelancers with great companies committed to improving developers' mental, physical, and emotional health and well-being.
+
+TODO Causal?
+
 <Todo/>
