--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_jobs.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_jobs.mdx
@@ -1,1 +1,14 @@
-<Todo/>
+🧑‍💼 [**Matters - Senior Software Engineer (React/Node)**](https://bit.ly/NLReactH)
+
+Envie de challenges et de contribuer à des réussites entrepreneuriales ? Rejoins notre startup studio pour construire des produits variés et complexes dans une culture devOps, une stack JS, des code reviews, tests et déploiements automatisés. Paris, remote flexible, 50K€-65K€.
+
+🧑‍💼 [**Linxea - Lead Dev React.js - 60-75k€**](https://www.welcometothejungle.com/fr/companies/linxea/jobs/lead-dev-react_paris)
+
+Plateforme leader de l’épargne en ligne.
+Stack tech : ReactJS, Redux, Saga, Formik, Storybook, Webpack, Typescript.
+Skills : architecture, développement, pratiques craft (clean architecture, clean code ,TDD), mentoring et formation des équipes.
+Paris 75008 - 2j de TT/sem.
+
+🧑‍💼 [**G2i - 100% Remote JavaScript Jobs**](https://www.g2i.co/)
+
+The only hiring platform that puts developer health first. We connect React and React Native freelancers with great companies committed to improving developers' mental, physical, and emotional health and well-being.
