add newsletter anchor links

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/index.mdx
@@ -21,7 +21,7 @@ import Support from "../_support.mdx"
 
 ---
 
-## 💸 Sponsor
+## 💸 Sponsor {#sponsor1}
 
 import Sponsor1 from "./_sponsor1.mdx"
 
@@ -29,7 +29,7 @@ import Sponsor1 from "./_sponsor1.mdx"
 
 ---
 
-## ⚛️ React
+## ⚛️ React {#react}
 
 import ReactContent from "./_react.mdx"
 
@@ -39,7 +39,7 @@ import ReactContent from "./_react.mdx"
 
 ---
 
-## 💸 Sponsor
+## 💸 Sponsor {#sponsor2}
 
 import Sponsor2 from "./_sponsor2.mdx"
 
@@ -47,7 +47,7 @@ import Sponsor2 from "./_sponsor2.mdx"
 
 ---
 
-## 📱 React-Native
+## 📱 React-Native {#react-native}
 
 import ReactNativeContent from "./_reactnative.mdx"
 
@@ -55,7 +55,7 @@ import ReactNativeContent from "./_reactnative.mdx"
 
 ---
 
-## 🧑‍💻 Jobs
+## 🧑‍💻 Jobs {#jobs}
 
 import Jobs from "./_jobs.mdx"
 
@@ -65,7 +65,7 @@ import Jobs from "./_jobs.mdx"
 
 ---
 
-## 🔀 Autre
+## 🔀 Autre {#other}
 
 import OtherContent from "./_other.mdx"
 
