--- a/website/newsletter/117/_jobs.mdx
+++ b/website/newsletter/117/_jobs.mdx
@@ -1,7 +1,7 @@
-🧑‍💼 [**G2i - 100% Remote JavaScript Jobs**](https://www.g2i.co/)
+🧑‍💼 [**G2i - 100% Remote React Native Jobs**](https://twitter.com/gabe_g2i/status/1563204813881425926?s=20&t=ArRLC77BpRwXXCdx8fnUqw)
 
-The only hiring platform that puts developer health first. We connect React and React Native freelancers with great companies committed to improving developers' mental, physical, and emotional health and well-being.
+We have several roles open for developers focused on React Native! Pay is ~160k plus 10% bonus. You must have production experience with RN and be based in the US. DM [@gabe_g2i](https://twitter.com/gabe_g2i) to learn more and don't forget to mention This Week in React.
 
 TODO Causal?
 
-<Todo/>
+<Todo />
