add some 117 content

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_react.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_react.mdx
@@ -1,1 +1,13 @@
-<Todo/>
+[Its fine](https://github.com/pmndrs/its-fine)
+
+https://twitter.com/0xca0a/status/1573064826339094528
+
+https://twitter.com/Cody_J_Bennett/status/1566480881350594560
+
+---
+
+- [Dan Abramov - "in what ways is react 18 faster than react 17?"](https://www.reddit.com/r/reactjs/comments/xmr9tg/comment/ippsuin/)
+- [TanStack Query 4.4](https://github.com/TanStack/query/releases/tag/v4.4.0): découplé de React, apporte le support d'un autre framework, SolidJS.
+- [Mitosis - Write components with Sveltejs syntax, compile to other frameworks d](https://twitter.com/Steve8708/status/1573444026006585345)
+
+React Finland [day 1](https://www.youtube.com/watch?v=zE8PDM_7xoQ) + [day 2](https://www.youtube.com/watch?v=rHjwZu0EmlQ)
