--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_reactnative.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_reactnative.mdx
@@ -1,1 +1,3 @@
-<Todo/>
+- [React-Native passe la barre des 1M downloads/week](https://twitter.com/thymikee/status/1574441040626552832)
+
+[Amélioration des stacktraces](https://twitter.com/thymikee/status/1568257655323475972)
