--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_react.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_react.mdx
@@ -4,10 +4,69 @@ https://twitter.com/0xca0a/status/1573064826339094528
 
 https://twitter.com/Cody_J_Bennett/status/1566480881350594560
 
----
+[React I Love You, But You're Bringing Me Down](https://marmelab.com/blog/2022/09/20/react-i-love-you.html)
 
+https://twitter.com/dan_abramov/status/1572590212647391235
+
+[Next.js Layouts RFC in 5 minutes](https://vercel.com/blog/next-js-layouts-rfc-in-5-minutes)
+
+https://twitter.com/leeerob/status/1570771294832185344
+
+https://twitter.com/delba_oliveira/status/1568291558776274945
+
+- https://nextjs.org/blog/next-12-3
+
+[React Router 6.4](https://remix.run/blog/react-router-v6.4)
+
+https://twitter.com/remix_run/status/1569783085000171521
+
+https://www.youtube.com/watch?v=aX74DbFT5nI
+
+[The new wave of Javascript web frameworks](https://frontendmastery.com/posts/the-new-wave-of-javascript-web-frameworks/)
+
+[What’s New In Gatsby 2022?](https://www.smashingmagazine.com/2022/09/new-gatsby-2022/)
+
+[Get in Zoomer, We're Saving React](https://acko.net/blog/get-in-zoomer-we-re-saving-react/)
+
+[useState with URLs: How to persist state with useSearchParams](https://blog.logrocket.com/use-state-url-persist-state-usesearchparams/)
+
+[An apparent React bug](https://phelipetls.github.io/posts/surprising-react-bug/)
+
+[When to use “useImperativeHandle” and “forwardRefs” in React 18](https://betterprogramming.pub/when-to-use-useimperativehandle-and-forwardrefs-in-react-18-89cce42b3309)
+
+[Storybook community showcase #3](https://storybook.js.org/blog/community-showcase-3/) + [I18n with Storybook](https://storybook.js.org/blog/internationalize-components-with-storybook/)
+
+[The Basics of Remix](https://css-tricks.com/the-basics-of-remix/)
+
+- New beta [useCallback](https://twitter.com/dan_abramov/status/1570021510659579904) + [useMemo](https://twitter.com/dan_abramov/status/1568602727147520000) docs
 - [Dan Abramov - "in what ways is react 18 faster than react 17?"](https://www.reddit.com/r/reactjs/comments/xmr9tg/comment/ippsuin/)
 - [TanStack Query 4.4](https://github.com/TanStack/query/releases/tag/v4.4.0): découplé de React, apporte le support d'un autre framework, SolidJS.
 - [Mitosis - Write components with Sveltejs syntax, compile to other frameworks d](https://twitter.com/Steve8708/status/1573444026006585345)
 
 React Finland [day 1](https://www.youtube.com/watch?v=zE8PDM_7xoQ) + [day 2](https://www.youtube.com/watch?v=rHjwZu0EmlQ)
+
+[freeCodeCamp - Code a Minecraft Clone with JavaScript, React, Three.js](https://www.youtube.com/watch?v=qpOZup_3P_A)
+
+[Gatsby 5 Umbrella Discussion](https://github.com/gatsbyjs/gatsby/discussions/36609): partial hydration...
+
+[React form without useState](https://twitter.com/DavidKPiano/status/1569361453928300545)
+
+[React and Observables from RxDB](https://www.sabre.com/locations/poland/react-and-observables-from-rxdb/)
+
+[5 Pro-Level React Do's & Don'ts](https://www.youtube.com/watch?v=4FhJkX18fS8)
+
+[Automated Rule Docs With Docusaurus and Remark](https://typescript-eslint.io/blog/automated-rule-docs-with-docusaurus-and-remark/)
+
+[Me & React: 5 Years in 15 Minutes](https://valeriavg.dev/me-and-react-5-years-in-15-minutes)
+
+[TinyBase 2.0](https://twitter.com/tinybasejs/status/1570864399728136193)
+
+[React is focused on the problems that matter more](https://twitter.com/heyImMapleLeaf/status/1567960223759093760) + [Evan You comment](https://twitter.com/youyuxi/status/1569485243077529602)
+
+[Introducing MUI Base: the headless alternative to Material UI](https://twitter.com/MUI_hq/status/1570695041034731520)
+
+[JS Party #244 - The spicy React debate show 🌶️](https://changelog.com/jsparty/244)
+
+[Theatre.js v0.5 is out!](https://www.theatrejs.com/blog/theatre-05-is-out)
+
+- [React-Tether 3.0](https://github.com/danreeves/react-tether/releases/tag/v3.0.0)
