--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_reactnative.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_reactnative.mdx
@@ -1,3 +1,21 @@
+[Announcing Ignite 8.0: “Maverick”](https://shift.infinite.red/announcing-ignite-8-0-maverick-fbbdafbb738e)
+
+https://twitter.com/ir_ignite/status/1574483319609499648
+
 - [React-Native passe la barre des 1M downloads/week](https://twitter.com/thymikee/status/1574441040626552832)
 
+- [TypeScript types are now a part of the React Native codebase - Shipping in v0.71](https://twitter.com/thymikee/status/1572132314280300546)
+
 [Amélioration des stacktraces](https://twitter.com/thymikee/status/1568257655323475972)
+
+[Shopify - Masonry FlashList](https://twitter.com/naqvitalha/status/1574416547426496513)
+
+[Amazon Interactive Video Service demo](https://twitter.com/nightstomp/status/1572576326934208513)
+
+[Software Mansion - Shared Element Transition with Reanimated sneak peek demo](https://twitter.com/swmansion/status/1572246971829608449)
+
+[Testing React Native WebView with React Native Testing Library](https://coolsoftware.dev/testing-react-native-webview-with-react-native-testing-library/)
+
+[The React Native Show #16 - React Native at Microsoft](https://www.callstack.com/podcasts/react-native-at-microsoft-ep-16)
+
+[PodRocket - Routers, app development, and legos with Evan Bacon](https://podrocket.logrocket.com/expo-router)
