--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_sponsor2.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_sponsor2.mdx
@@ -1,5 +1,5 @@
-[**Cambly: la solution pour maîtriser l'anglais IRL**](https://www.cambly.com/)
+[**Progressez dans votre anglais professionnel avec Cambly**](https://cambly.info/reacthebdo1)
 
 Cambly, c'est la plateforme pour progresser à l'oral en anglais avec des tuteurs anglophones, quand et où vous voulez. Maîtriser le vocabulaire technique, interagir avec vos collègues ou clients à l'international ou travailler depuis n'importe où dans le monde, nos tuteurs s'adaptent à vos besoins, votre niveau et vos objectifs.
 
-[Faites un cours d'essai gratuit de 15 minutes et profitez de 50% de réduction sur votre abonnement](https://cambly.info/reacthebdo1)
+[👉Faites un cours d'essai gratuit de 15 minutes et profitez de 50% de réduction sur votre abonnement](https://cambly.info/reacthebdo1)
