--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_other.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_other.mdx
@@ -1,38 +1,15 @@
-[TypeScript 4.9 beta](https://devblogs.microsoft.com/typescript/announcing-typescript-4-9-beta/)
-
-Avec l'operateur satisfies
-
-**Extras**:
-
+- [Qwik and Qwik City have reached beta!](https://www.builder.io/blog/qwik-and-qwik-city-have-reached-beta): framework novateur, concurrent à React, basé sur la résumabilité plutôt que l'hydratation
+- [TypeScript 4.9 beta](https://devblogs.microsoft.com/typescript/announcing-typescript-4-9-beta/): nouvelle feature `satisfies` est très attendue!
+- [Token CSS](https://twitter.com/tokencss/status/1571823928187633664): alternative à Tailwind?
+- [Updates from the 92nd TC39 meeting](https://dev.to/hemanth/updates-from-the-92nd-tc39-meeting-5fi6): petite update
+- [Cloudflare - workerd: the Open Source Workers runtime](https://blog.cloudflare.com/workerd-open-source-workers-runtime/)
+- [Meta - MemLab: An open source framework for finding JavaScript memory leaks](https://engineering.fb.com/2022/09/12/open-source/memlab/)
 - [Type-Level TypeScript](https://type-level-typescript.com/)
-
-- Total TypeScript: [TypeScript Tips](https://www.totaltypescript.com/tips) + [Zod tutorial](https://www.totaltypescript.com/tutorials/zod)
-- [Node.js - September 2022 Security Releases](https://nodejs.org/en/blog/vulnerability/september-2022-security-releases/)
-
-Ezno https://twitter.com/robpalmer2/status/1573244310644199425
-
-Turborepo 1.5 https://twitter.com/turborepo/status/1573017581459488769
-
-[Vercel - Commenting on Deploy Previews](https://vercel.com/blog/introducing-commenting-on-preview-deployments)
-
-[2022 Web Almanac](https://almanac.httparchive.org/en/2022/) + https://twitter.com/HTTPArchive/status/1574451518224343048
-
-[Deno - Slack releases platform open beta](https://deno.com/blog/slack-open-beta)
-
-[Qwik and Qwik City have reached beta!](https://www.builder.io/blog/qwik-and-qwik-city-have-reached-beta)
-
-[Qwik - the world's first O(1) JavaScript framework?](https://www.youtube.com/watch?v=x2eF3YLiNhY)
-
-[Token CSS](https://twitter.com/tokencss/status/1571823928187633664)
-
-[tRPC 10 beta](https://twitter.com/alexdotjs/status/1571807618254905344)
-
-[Chrome Developers - Container queries begin to land in stable browsers](https://developer.chrome.com/blog/cq-polyfill/)
-
-[WebKit Features in Safari 16.0](https://webkit.org/blog/13152/webkit-features-in-safari-16-0/)
-
-[Best practices for creating a modern npm package](https://snyk.io/blog/best-practices-create-modern-npm-package/)
-
-[Updates from the 92nd TC39 meeting](https://dev.to/hemanth/updates-from-the-92nd-tc39-meeting-5fi6)
-
-[MemLab: An open source framework for finding JavaScript memory leaks](https://engineering.fb.com/2022/09/12/open-source/memlab/)
+- TotalTypeScript [Tips](https://www.totaltypescript.com/tips) + [Zod tutorial](https://www.totaltypescript.com/tutorials/zod)
+- [Ezno, new type-checking compiler for JavaScript](https://twitter.com/robpalmer2/status/1573244310644199425)
+- [Turborepo 1.5](https://twitter.com/turborepo/status/1573017581459488769)
+- [tRPC 10 beta](https://twitter.com/alexdotjs/status/1571807618254905344)
+- [2022 Web Almanac](https://almanac.httparchive.org/en/2022/)
+- [Chrome Developers - Container queries begin to land in stable browsers](https://developer.chrome.com/blog/cq-polyfill/)
+- [WebKit Features in Safari 16.0](https://webkit.org/blog/13152/webkit-features-in-safari-16-0/)
+- [Best practices for creating a modern npm package](https://snyk.io/blog/best-practices-create-modern-npm-package/)
