--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_react.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/_react.mdx
@@ -1,4 +1,4 @@
-[Its fine](https://github.com/pmndrs/its-fine)
+[**Its fine**](https://github.com/pmndrs/its-fine)
 
 https://twitter.com/0xca0a/status/1573064826339094528
 
@@ -70,3 +70,5 @@ React Finland [day 1](https://www.youtube.com/watch?v=zE8PDM_7xoQ) + [day 2](htt
 [Theatre.js v0.5 is out!](https://www.theatrejs.com/blog/theatre-05-is-out)
 
 - [React-Tether 3.0](https://github.com/danreeves/react-tether/releases/tag/v3.0.0)
+
+- [Next.js a mergé 10000 pull-requests](https://twitter.com/github/status/1574750716966498304)
