--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/index.mdx
@@ -9,31 +9,35 @@ draft: true
 
 Salut à tous !
 
-<Todo/>
+Cette semaine nous avons des critiques de React intéressantes à lire.
+
+Le sujet principale reste le routing: des nouvelles intéressantes de Next.js, React-Router, Expo...
+
+La newsletter **reprend enfin son rythme hebdomadaire habituel**! Je rentre tout juste de vacances, et j'ai profité de l'été pour changer de provider email: j'utilise maintenant [ConvertKit](https://thisweekinreact.com/ck). Cela me donne plus de fléxibilité sur le rendu des emails et me permettra d'introduire quelques nouveautés par la suite ;)
 
 <!-- truncate -->
 
 ---
 
-import Support from "../_support.mdx"
+import Support from "../_support.mdx";
 
-<Support/>
+<Support />
 
 ---
 
 ## 💸 Sponsor {#sponsor1}
 
-import Sponsor1 from "./_sponsor1.mdx"
+import Sponsor1 from "./_sponsor1.mdx";
 
-<Sponsor1/>
+<Sponsor1 />
 
 ---
 
 ## ⚛️ React {#react}
 
-import ReactContent from "./_react.mdx"
+import ReactContent from "./_react.mdx";
 
-<ReactContent/>
+<ReactContent />
 
 <SubscribeFormEmbed />
 
@@ -41,25 +45,25 @@ import ReactContent from "./_react.mdx"
 
 ## 💸 Sponsor {#sponsor2}
 
-import Sponsor2 from "./_sponsor2.mdx"
+import Sponsor2 from "./_sponsor2.mdx";
 
-<Sponsor2/>
+<Sponsor2 />
 
 ---
 
 ## 📱 React-Native {#react-native}
 
-import ReactNativeContent from "./_reactnative.mdx"
+import ReactNativeContent from "./_reactnative.mdx";
 
-<ReactNativeContent/>
+<ReactNativeContent />
 
 ---
 
 ## 🧑‍💻 Jobs {#jobs}
 
-import Jobs from "./_jobs.mdx"
+import Jobs from "./_jobs.mdx";
 
-<Jobs/>
+<Jobs />
 
 💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
 
@@ -67,12 +71,12 @@ import Jobs from "./_jobs.mdx"
 
 ## 🔀 Autre {#other}
 
-import OtherContent from "./_other.mdx"
+import OtherContent from "./_other.mdx";
 
-<OtherContent/>
+<OtherContent />
 
 ---
 
-import Meme from "./_meme.mdx"
+import Meme from "./_meme.mdx";
 
-<Meme/>
+<Meme />
