--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/117/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 117
-title: "📨 #117: ..."
+title: "📨 #117: critiques React, useEvent, Next.js, Remix, Gatsby, Expo, Storybook, Ignite, React-Native, TypeScript, Qwik..."
 authors: [slorber]
 date: 09-27-2022
 image: /img/TWIR_POST.png
