prepare english content

--- a/website/newsletter/117/index.mdx
+++ b/website/newsletter/117/index.mdx
@@ -1,39 +1,41 @@
 ---
 slug: 117
-title: "📨 #117: ..."
+title: "📨 #117: React criticism, useEvent, Next.js, Remix, Gatsby, Expo, Storybook, Ignite, React-Native, TypeScript, Qwik..."
 authors: [slorber]
 date: 09-27-2022
 image: /img/TWIR_POST.png
 draft: true
 ---
 
-Hi everyone!
+This week we have some interesting React criticisms to read.
 
-<Todo/>
+We also have various interesting routing-related news: Next.js, React-Router, Expo...
+
+The newsletter **is finally back to its usual weekly rhythm**! I'm just back from vacations, and I took the opportunity to change my email provider: I'm now using [ConvertKit](https://thisweekinreact.com/ck). This gives me more flexibility on the email rendering and will allow me to introduce some new features later ;)
 
 <!-- truncate -->
 
 ---
 
-import Support from "../_support.mdx"
+import Support from "../_support.mdx";
 
-<Support/>
+<Support />
 
 ---
 
 ## 💸 Sponsor {#sponsor1}
 
-import Sponsor1 from "./_sponsor1.mdx"
+import Sponsor1 from "./_sponsor1.mdx";
 
-<Sponsor1/>
+<Sponsor1 />
 
 ---
 
 ## ⚛️ React {#react}
 
-import ReactContent from "./_react.mdx"
+import ReactContent from "./_react.mdx";
 
-<ReactContent/>
+<ReactContent />
 
 <SubscribeFormEmbed />
 
@@ -41,23 +43,23 @@ import ReactContent from "./_react.mdx"
 
 ## 💸 Sponsor {#sponsor2}
 
-import Sponsor2 from "./_sponsor2.mdx"
+import Sponsor2 from "./_sponsor2.mdx";
 
 ---
 
 ## 📱 React-Native {#react-native}
 
-import ReactNativeContent from "./_reactnative.mdx"
+import ReactNativeContent from "./_reactnative.mdx";
 
-<ReactNativeContent/>
+<ReactNativeContent />
 
 ---
 
 ## 🧑‍💻 Jobs {#jobs}
 
-import Jobs from "./_jobs.mdx"
+import Jobs from "./_jobs.mdx";
 
-<Jobs/>
+<Jobs />
 
 💡 [How to publish an offer ?](https://thisweekinreact.com/sponsor)
 
@@ -65,12 +67,12 @@ import Jobs from "./_jobs.mdx"
 
 ## 🔀 Other {#other}
 
-import OtherContent from "./_other.mdx"
+import OtherContent from "./_other.mdx";
 
-<OtherContent/>
+<OtherContent />
 
 ---
 
-import Meme from "./_meme.mdx"
+import Meme from "./_meme.mdx";
 
-<Meme/>
+<Meme />
