--- a/website/newsletter/117/_other.mdx
+++ b/website/newsletter/117/_other.mdx
@@ -1,1 +1,15 @@
-<Todo/>
+- [Qwik and Qwik City have reached beta!](https://www.builder.io/blog/qwik-and-qwik-city-have-reached-beta): cutting-edge framework, React challenger based on resumability instead of hydration
+- [TypeScript 4.9 beta](https://devblogs.microsoft.com/typescript/announcing-typescript-4-9-beta/): new feature `satisfies` highly anticipated!
+- [Token CSS](https://twitter.com/tokencss/status/1571823928187633664): possible alternative to Tailwind?
+- [Updates from the 92nd TC39 meeting](https://dev.to/hemanth/updates-from-the-92nd-tc39-meeting-5fi6): small update
+- [Cloudflare - workerd: the Open Source Workers runtime](https://blog.cloudflare.com/workerd-open-source-workers-runtime/)
+- [Meta - MemLab: An open source framework for finding JavaScript memory leaks](https://engineering.fb.com/2022/09/12/open-source/memlab/)
+- [Type-Level TypeScript](https://type-level-typescript.com/)
+- TotalTypeScript [Tips](https://www.totaltypescript.com/tips) + [Zod tutorial](https://www.totaltypescript.com/tutorials/zod)
+- [Ezno, new type-checking compiler for JavaScript](https://twitter.com/robpalmer2/status/1573244310644199425)
+- [Turborepo 1.5](https://twitter.com/turborepo/status/1573017581459488769)
+- [tRPC 10 beta](https://twitter.com/alexdotjs/status/1571807618254905344)
+- [2022 Web Almanac](https://almanac.httparchive.org/en/2022/)
+- [Chrome Developers - Container queries begin to land in stable browsers](https://developer.chrome.com/blog/cq-polyfill/)
+- [WebKit Features in Safari 16.0](https://webkit.org/blog/13152/webkit-features-in-safari-16-0/)
+- [Best practices for creating a modern npm package](https://snyk.io/blog/best-practices-create-modern-npm-package/)
